@@ -1,3 +1,7 @@
+1994-06-24  dickey@clark.net
+
+	* src/newpath/newpath.sh: RCS_BASE
+
 1994-06-23  dickey@clark.net
 
 	* src/newpath/newpath.c: ULTRIX has no 'strdup()'
